Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerIntObjField.quorum
class Main
    Integer i
    integer int
    action Main
        i:SetValue(5)
        int = cast(integer, i)
        if int = 5
            output "passed"
        end
    end
end