Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjIntObj.quorum
class main
    action Main
        Integer i
        Text txt
        i:SetValue(5)
        txt = cast(Text, i)
    end
end